EXTRA_DIST = \
	dbtt.pfb \
	dbttb.pfb \
	dbttbi.pfb \
	dbtti.pfb \
	norasi_b.pfb \
	norasi_bi.pfb \
	norasi_i.pfb \
	norasi_n.pfb

type1dir = @texmfdir@/fonts/type1/public/thai
type1_DATA = \
	dbtt.pfb \
	dbttb.pfb \
	dbttbi.pfb \
	dbtti.pfb \
	norasi_b.pfb \
	norasi_bi.pfb \
	norasi_i.pfb \
	norasi_n.pfb                                         

